improve ci query performance and add performance measure log